--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,19 +12,23 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r mlops_pipeline/requirements.txt
           pip install flake8 pytest pandas
+
       - name: Lint with flake8
         run: |
           flake8 mlops_pipeline/scripts --count --select=E9,F63,F7,F82 --show-source --statistics
           flake8 mlops_pipeline/scripts --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
       - name: Test with pytest
         run: |
           pytest || (if [ $? -eq 5 ]; then echo "Pytest finished: No tests found."; exit 0; else exit $?; fi)
@@ -39,16 +43,29 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r mlops_pipeline/requirements.txt
+
       - name: Run Data Validation
         run: python mlops_pipeline/scripts/01_data_validation.py
+
       - name: Run Data Preprocessing
         id: preprocessing
-        run: python mlops_pipeline/s_
+        run: python mlops_pipeline/scripts/02_data_preprocessing.py
+
+      - name: Run Model Training & Register
+        run: python mlops_pipeline/scripts/03_train_evaluate_register.py ${{ steps.preprocessing.outputs.run_id }} 300
+
+      - name: Upload MLflow artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: mlflow-artifacts
+          path: mlruns/
