--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,36 +2,46 @@ name: MLOps Pipeline CI/CT/CD
 
 on:
   push:
-    branches: ["main"]
+    branches: [ "main" ]
   pull_request:
-    branches: ["main"]
+    branches: [ "main" ]
+
+concurrency:
+  group: mlops-pipeline-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   ci-checks:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v5
+      with:
+        python-version: '3.10'
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
+    - name: Install dependencies
+      shell: bash
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r mlops_pipeline/requirements.txt
+        pip install flake8 pytest pandas
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r mlops_pipeline/requirements.txt
-          pip install flake8 pytest pandas
+    - name: Lint with flake8
+      shell: bash
+      run: |
+        flake8 mlops_pipeline/scripts --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 mlops_pipeline/scripts --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
-      - name: Lint with flake8
-        run: |
-          flake8 mlops_pipeline/scripts --count --select=E9,F63,F7,F82 --show-source --statistics
-          flake8 mlops_pipeline/scripts --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-
-      - name: Test with pytest
-        run: |
-          pytest || (if [ $? -eq 5 ]; then echo "Pytest finished: No tests found."; exit 0; else exit $?; fi)
+    - name: Test with pytest (pass if no tests)
+      shell: bash
+      run: |
+        pytest || code=$?
+        if [ "${code:-0}" -eq 5 ]; then
+          echo "Pytest finished: No tests found."
+          exit 0
+        elif [ -n "${code:-}" ] && [ "$code" -ne 0 ]; then
+          exit "$code"
+        fi
 
   build-and-train:
     needs: ci-checks
@@ -40,32 +50,46 @@ jobs:
       MLFLOW_TRACKING_URI: ${{ secrets.MLFLOW_TRACKING_URI }}
       MLFLOW_TRACKING_USERNAME: ${{ secrets.MLFLOW_TRACKING_USERNAME }}
       MLFLOW_TRACKING_PASSWORD: ${{ secrets.MLFLOW_TRACKING_PASSWORD }}
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v5
+      with:
+        python-version: '3.10'
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
+    - name: Install dependencies
+      shell: bash
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r mlops_pipeline/requirements.txt
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r mlops_pipeline/requirements.txt
+    - name: Run Data Validation
+      shell: bash
+      run: |
+        python mlops_pipeline/scripts/01_data_validation.py
 
-      - name: Run Data Validation
-        run: python mlops_pipeline/scripts/01_data_validation.py
+    - name: Run Data Preprocessing
+      id: preprocessing
+      shell: bash
+      run: |
+        python mlops_pipeline/scripts/02_data_preprocessing.py
 
-      - name: Run Data Preprocessing
-        id: preprocessing
-        run: python mlops_pipeline/scripts/02_data_preprocessing.py
+    - name: Run Model Training, Evaluation, and Registration
+      shell: bash
+      run: |
+        # arg1: run_id จาก step preprocessing (อ่านจาก $GITHUB_OUTPUT ในสคริปต์)
+        # arg2: ACCURACY_THRESHOLD (ตั้งให้เหมาะกับงานจริง)
+        python mlops_pipeline/scripts/03_train_evaluate_register.py ${{ steps.preprocessing.outputs.run_id }} 0.85
 
-      - name: Run Model Training & Register
-        run: python mlops_pipeline/scripts/03_train_evaluate_register.py ${{ steps.preprocessing.outputs.run_id }} 300
+    - name: Transition Model to Staging
+      if: success()
+      shell: bash
+      run: |
+        python mlops_pipeline/scripts/04_transition_model.py "wine-classifier-prod" "Staging"
 
-      - name: Upload MLflow artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: mlflow-artifacts
-          path: mlruns/
+    - name: Upload MLflow artifacts (skip if using remote tracking)
+      if: ${{ hashFiles('mlruns/**') != '' }}
+      uses: actions/upload-artifact@v4
+      with:
+        name: mlflow-artifacts
+        path: mlruns/
